--- a/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -20,7 +18,7 @@
       </BorderPane>
    </top>
    <center>
-      <VBox fx:id="chosenColor" prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
          <children>
             <BorderPane fx:id="drawingBoard" onMouseClicked="#handleDrawingBoard">
                <center>
@@ -38,14 +36,10 @@
             <Button fx:id="backButton" layoutX="35.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <Label layoutX="433.0" layoutY="113.0" text="Actual Length : " />
             <TextField fx:id="setActualLengthY" layoutX="538.0" layoutY="109.0" onAction="#setActualLengthY" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
-            <Button fx:id="setX" layoutX="176.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleSetX" text="Set X" />
-            <Button fx:id="setY" layoutX="248.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleSetY" text="Set Y" />
+            <Button fx:id="setX" layoutX="152.0" layoutY="52.0" mnemonicParsing="false" onAction="#handleSetX" text="Set X" />
+            <Button fx:id="setY" layoutX="153.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleSetY" text="Set Y" />
             <Label layoutX="433.0" layoutY="56.0" text="Actual Length : " />
             <TextField fx:id="setActualLengthX" layoutX="538.0" layoutY="52.0" onAction="#setActualLengthX" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
-            <CheckBox fx:id="setX" layoutX="269.0" layoutY="56.0" mnemonicParsing="false" onAction="#handleSetX" text="Set X" />
-            <CheckBox layoutX="269.0" layoutY="83.0" mnemonicParsing="false" text="Set Y" />
-            <ColorPicker fx:id="colorChoice" editable="true" layoutX="35.0" layoutY="52.0" onAction="#handleColorChoice" />
-            <CheckBox layoutX="269.0" layoutY="113.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="69.0" text="Origin" />
          </children>
       </AnchorPane>
    </bottom>
