--- a/ProjectBittern/src/edu/augustana/csc285/bittern/AutoTrackWindowController.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/AutoTrackWindowController.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="850" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.MainWindowController">
+<BorderPane prefHeight="900" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.AutoTrackWindowController">
    <top>
       <BorderPane BorderPane.alignment="CENTER">
          <center>
