--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -8,6 +8,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -21,9 +24,24 @@
             <Button fx:id="nextButton" layoutX="427.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleNext" prefWidth="60.0" text="Forward" />
             <Button fx:id="exportButton" layoutX="699.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
             <Button fx:id="backButton" layoutX="14.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
-            <ComboBox fx:id="tracksBox" layoutX="26.0" layoutY="53.0" onAction="#handleTracksBox" prefWidth="150.0" promptText="Autotracks" />
             <Label fx:id="startFrameLabel" layoutX="639.0" layoutY="32.0" prefHeight="17.0" prefWidth="85.0" />
             <Label fx:id="endFrameLabel" layoutX="758.0" layoutY="32.0" prefHeight="17.0" prefWidth="78.0" />
+            <GridPane layoutX="565.0" layoutY="21.0" prefHeight="60.0" prefWidth="246.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ComboBox fx:id="tracksBox" onAction="#handleTracksBox" prefHeight="26.0" prefWidth="118.0" promptText="Autotracks" GridPane.rowIndex="1" />
+                  <Button fx:id="addTrackButton" mnemonicParsing="false" onAction="#handleAddTrack" prefHeight="25.0" prefWidth="116.0" text="Add AutoTrack" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="removeTrackButton" mnemonicParsing="false" onAction="#handleRemoveTrack" text="Remove AutoTrack" GridPane.columnIndex="1" />
+                  <ComboBox fx:id="usedTracksBox" onAction="#handleUsedTracksBox" prefWidth="118.0" promptText="Used Tracks" />
+               </children>
+            </GridPane>
          </children>
       </AnchorPane>
    </bottom>
