--- a/ProjectBittern/src/edu/augustana/csc285/bittern/FirstWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/FirstWindow.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -19,7 +20,11 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Canvas fx:id="videoCanvas" height="560.0" width="751.0" />
+            <Pane fx:id="paneHoldingCanvas">
+               <children>
+                  <Canvas fx:id="videoCanvas" height="560.0" width="751.0" />
+               </children>
+            </Pane>
             <Slider fx:id="sliderBar" />
          </children>
       </VBox>
